# hoffmanavenuesoftware

./: .ghci  README.md  about.md  hoffmanavenuesoftware-com.cabal  hoffmanavenuesoftware.conf  index.html  notes
css/: grayscale.css  mspiff.css
js/: grayscale.js  mspiff.js  vis.js
posts/: adj.md  mspiff.md
src/: Site.hs  main.hs
templates/: nav.html  naventry.html  page.html  post.html
wip/: mspiff.hs  mspiff.md  mspiff.notes
