name:               hoffmanavenuesoftware-com
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs: src
  main-is:        main.hs
  build-depends:  base == 4.*
                  , hakyll == 4.9.*
                  , text
                  , time
                  , containers
                  , unordered-containers
                  , split
                  , bytestring
                  , aeson
                  , vector
                  , binary
                  , blaze-html
                  , blaze-markup
                  , split
                  , parsec
                  , haskell-src-exts
                  , contravariant
                  , array
  ghc-options:
  other-modules: Site
  default-extensions: OverloadedStrings
                      , FlexibleContexts
  default-language: Haskell2010

executable mspiff
  hs-source-dirs: wip
  main-is:        mspiff.hs
  build-depends:  base == 4.*
                  , hakyll == 4.9.*
                  , text
                  , time
                  , containers
                  , unordered-containers
                  , split
                  , bytestring
                  , aeson
                  , vector
                  , binary
                  , blaze-html
                  , blaze-markup
                  , split
                  , parsec
                  , contravariant
                  , array
  ghc-options: -O2
  default-extensions: OverloadedStrings
                      , FlexibleContexts
  default-language: Haskell2010

